Some refactoring
Made a parent abstract class Matrix and then extended it by MutableMatrix and ImmutableMatrix.